# mir-frankfurt-workshop

./: CMakeLists.txt  README.md
src/: main.cpp  mirly_window_manager.cpp  mirly_window_manager.h
